# pi-smart-clock

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  build.rs  memory.x
.cargo/: config.toml
assets/icons/playful/: README.txt
assets/splash/: README.txt
config/: alarms.csv.example  esp8266.conf.example  faces.conf.example  holidays.conf  holidays.conf.example  panels.conf  panels.conf.example  weather.conf  weather.conf.example
debian/: changelog  control  copyright  pi-smart-clock.desktop  pi-smart-clock.lintian-overrides  pi-smart-clock.manpages  rules
debian/man/: pi-smart-clock.1
debian/source/: options
docs/: CONFIGURATION_MANUAL.md  CUSTOMIZATION.md  DRIVERS.md  EMBEDDED.md  LINUX.md  README.md  ROADMAP.md  SHARED_CODE.md  TODO.md
firmware/: alloc.rs  main.rs
firmware/esp8266/smart_clock_bridge/: smart_clock_bridge.ino
scripts/: audit-todos.sh  debian-build.sh  debian-clean.sh  debian-deps.sh  linux-build.sh  linux-deps.sh  pico-build.sh  setup-embedded.sh
sounds/: README.txt
src/: chimes.rs  clock.rs  config.rs  layout.rs  lib.rs  main.rs  panel.rs  prelude.rs  time_util.rs  timing.rs
src/clock_core/: about.rs  alarm.rs  alarm_sound_selector.rs  alarm_ui.rs  alarm_video.rs  alert_photos.rs  alerts.rs  boot_screen.rs  boot_splash.rs  clock.rs  energy_monitor.rs  logger.rs  mod.rs  persistence.rs  sensors.rs  time_set_ui.rs  update_scheduler.rs  voice_commands.rs  voice_feedback.rs  weather.rs
src/clock_core/boot/: loader.rs  mod.rs  reveal.rs  status.rs
src/clock_core/panels/: weather.rs
src/core/: about.rs  alarm.rs  alarm_sound_selector.rs  alarm_ui.rs  alarm_video.rs  alert_photos.rs  alerts.rs  boot_screen.rs  clock.rs  energy_monitor.rs  logger.rs  menu.rs  mod.rs  persistence.rs  sensors.rs  status_bar.rs  time_set_ui.rs  update_scheduler.rs  voice_feedback.rs  weather.rs
src/core/panels/: weather.rs
src/drivers/: aht20.rs  ds3231.rs  microphone.rs  mod.rs  mqtt.rs  ntp.rs  platform.rs  rotary_encoder.rs  sd_audio.rs  sd_storage.rs
src/drivers/esp8266/: config.rs  mod.rs  serial_link.rs
src/icons/: atlas.rs  mod.rs
src/modules/: bar.rs  bottom_module.rs  calendar.rs  config.rs  holidays.rs  kind.rs  lunar.rs  mod.rs  module_id.rs  registry.rs  slot.rs  venus_pentagram.rs  weather.rs  zodiac.rs
src/modules/faces/: config.rs  hand.rs  layout.rs  mod.rs  numerals.rs  svg.rs
src/modules/holidays/: config.rs  mod.rs
src/modules/weather/: api.rs  cache.rs  config.rs  icons.rs  mod.rs
src/ota/: mod.rs  progress.rs  rollback.rs  updater.rs
src/platform/: dvi_gfx.rs  linux.rs  linux_audio.rs  mod.rs  rp2040.rs
src/runtime/: mod.rs  mode.rs  state.rs  tick.rs
src/storage/: embedded.rs  linux.rs  logical.rs  mod.rs
src/web/: esp_web.rs  mod.rs
videos/: README.txt
