[package]
name = "pi-smart-clock"
version = "0.1.0"
edition = "2021"
description = "Smart clock for Raspberry Pi (SDL2 Linux dev) and Pico DVI (Embassy)"
readme = "README.md"
default-run = "pi-smart-clock"

[lib]
name = "pi_smart_clock"
path = "src/lib.rs"

[[bin]]
name = "pi-smart-clock"
path = "src/main.rs"
required-features = ["linux-full"]

[[bin]]
name = "pi-smart-clock-firmware"
path = "firmware/main.rs"
required-features = ["pico-dvi"]

[features]
# Linux desktop/SDL build (default). For Pico use: cargo pico  (see .cargo/config.toml)
default = ["linux-full"]
linux-full = [
    "dep:sdl2",
    "sdl2/ttf",
    "sdl2/mixer",
    "dep:tokio",
    "dep:ureq",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:serialport",
    "dep:chrono",
    "chrono/std",
    "chrono/clock",
    "dep:serde",
    "serde/std",
    "dep:serde_json",
]
pico-dvi = [
    "dep:embassy-executor",
    "dep:embassy-rp",
    "dep:embassy-time",
    "dep:embedded-graphics",
    "dep:cortex-m-rt",
]

[dependencies]
sdl2 = { version = "0.38", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
serialport = { version = "4.6", optional = true }

embassy-executor = { version = "0.6", optional = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.4", optional = true, features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.4", optional = true }
embedded-graphics = { version = "0.8", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
