[package]
name = "pi-smart-clock"
version = "0.1.0"
edition = "2021"
description = "Smart clock for Raspberry Pi (SDL2 Linux dev) and Pico DVI (Embassy)"
readme = "README.md"
default-run = "pi-smart-clock"

[lib]
name = "pi_smart_clock"
path = "src/lib.rs"

[[bin]]
name = "pi-smart-clock"
path = "src/main.rs"
required-features = ["linux-full"]

[[bin]]
name = "pi-smart-clock-firmware"
path = "firmware/main.rs"
required-features = ["pico-dvi"]

[features]
# Linux desktop/SDL build (default). For Pico use: cargo pico  (see .cargo/config.toml)
default = ["linux-full"]
linux-full = [
    "dep:sdl2",
    "sdl2/ttf",
    "sdl2/mixer",
    "dep:tokio",
    "dep:ureq",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:serialport",
    "dep:chrono",
    "chrono/std",
    "chrono/clock",
    "dep:serde",
    "serde/std",
    "dep:serde_json",
    "dep:image",
]
pico-dvi = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:pico-dvi-rs",
    "dep:rp2040-hal",
    "dep:embedded-alloc",
    "dep:rp-pico",
    "dep:libm",
]

[dependencies]
sdl2 = { version = "0.38", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
serialport = { version = "4.6", optional = true }

embedded-graphics = { version = "0.8", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
pico-dvi-rs = { path = "third_party/pico-dvi-rs", optional = true }
rp2040-hal = { version = "0.9", optional = true, features = ["rt"] }
embedded-alloc = { version = "0.5", optional = true }
fugit = { version = "0.3", optional = true, default-features = false }
rp-pico = { version = "0.8", optional = true, features = ["rom-v2-intrinsics", "rp2040-e5"] }
libm = { version = "0.2", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
