[package]
name = "pi-smart-clock"
version = "0.1.0"
edition = "2021"
description = "Smart clock targeting Debian Trixie and OpenIndiana 2025 (SDL2 desktop)"
readme = "README.md"
license = "MIT OR GPL-2.0-or-later"
default-run = "pi-smart-clock"

[lib]
name = "pi_smart_clock"
path = "src/lib.rs"

[[bin]]
name = "pi-smart-clock"
path = "src/main.rs"
required-features = ["full"]

[features]
# Full desktop/SDL build (default) for Unix targets including Debian Trixie and OpenIndiana 2025.
default = ["full"]
full = [
    "dep:sdl2",
    "sdl2/ttf",
    "sdl2/mixer",
    "dep:tokio",
    "dep:ureq",
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
    "dep:serialport",
    "dep:chrono",
    "chrono/std",
    "chrono/clock",
    "dep:serde",
    "serde/std",
    "dep:serde_json",
    "dep:image",
]

[dependencies]
sdl2 = { version = "0.38", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }
serialport = { version = "4.6", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
